Add book retrieve API
