# controller/routers.go
@@ -7,9 +7,11 @@ import (
 
 func addRoutes() {
 	e.GET("/doc/*", echoSwagger.WrapHandler)
+
 	e.POST("/api/login", login)
 
 	api := e.Group("/api", middleware.Auth)
-	api.POST("/book", nil)
-	api.POST("/books", storeBookCsv)
+	api.PUT("/book", storeBook)
+	api.PUT("/books", storeBookCsv)
+	api.GET("/books", retrieveBooks)
 }
